# Tarot

./: .gitignore  README.md  build_windows.ps1  pyproject.toml
app/: __init__.py  main.py
app/models/: __init__.py  card.py  deck.py  draw.py
app/services/: __init__.py  asset_loader.py  session_service.py
app/ui/: __init__.py  main_window.py
app/ui/widgets/: __init__.py  card_view.py  history_panel.py
app/utils/: paths.py
assets/: cards_manifest.json
assets/backs/: card_back.ppm
assets/cards/cbd_tarot_marseille/: README.md
assets/credits/: SOURCES.md
config/: app_config.json
